added reset.css file

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Who is Luis Romero?</title>
+   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <img class="first-image" src="images/casual.JPG" alt="Luis Romero standing and looking into the distance"
+    width="400"
+    height="500">
+    <p>My name is Luis Ricardo Romero and i like to run!</p>
+    <p>Although my first name is Luis i prefer to be called Ricky.</p>
 
 </body>
 
